<resources>
    <string name="app_name">Submission2</string>

    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="jmlh_followers">JmlFollowers</string>
    <string name="jmlh_following">JmlFollowing</string>
    <string name="notfound">User Not Found</string>
    <string name="tabs">Tab</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">Favorite</string>
    <string name="change_language">Change language</string>
    <string name="the_app_will_be_displayed_in_your_locale_language">The app will be displayed in your locale language.</string>
    <string name="favorite_not_found">There is no user in here. Favorite more.</string>
    <string name="fav_desc" translatable="false">To input the favorite</string>
    <string name="fav_username">Profile Username</string>
    <string name="fav_name">Profile Name</string>
    <string name="clear">Clear</string>
</resources>