<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search"
        android:orderInCategory="200"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/favorite"
        android:orderInCategory="200"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/settings"
        android:orderInCategory="200"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>