<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_dark"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_detailuser"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_userlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="15dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginEnd="20dp"
                            android:gravity="center"
                            android:text="@string/followers"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginEnd="20dp"
                            android:gravity="center"
                            android:text="@string/jmlh_followers"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:text="@string/jmlh_following"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/pb_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:visibility="invisible" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/tabs"
                app:tabTextColor="@color/black" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

            <TextView
                android:id="@+id/dt_notfound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/notfound"
                android:visibility="visible"
                tools:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/favorite_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>